--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -461,7 +461,7 @@ p {
 /* accordion */
 
 .accordion-header h4 {
-    font-size: 18px;
+    font-size: 17px;
     font-weight: 400;
     padding: 5px 20px;
     background-color: #27aae1;
@@ -673,3 +673,5 @@ p {
         font-size: 13px;
     }
 }
+
+.accordion-header h4
